# psgdax

./: .gitignore  LICENSE  README.md  devenv.nix  pyproject.toml
src/psgdax/: __init__.py  psgd.py
