[project]
name = "psgdax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "clementpoiret", email = "clement@linux.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.7.2",
    "optax>=0.2.4",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
